# MIPS-Simulator

./: README.md  instructions  tofix.txt
assembler/: Cargo.toml  asm_instr  asm_listing  error_test1  error_test2  file  test  test1  test2  test3  test4  test5  test6  test7
assembler/src/: asm_instr  asm_listing  assembler.rs  test.rs
mips-simu/: Cargo.toml
mips-simu/src/: app.rs  main.rs
mips-simu/src/units/: add_unit.rs  alu_control.rs  control.rs  instruction_memory.rs  mux.rs  program_counter.rs  registers.rs  sign_extend.rs  unit.rs
mips_sim/: Cargo.toml  index.html  nop  pipeline.txt  test1  test7  test_beq  test_error_file  test_i  test_instruction_limit  test_jr  test_jr_illegal  test_jr_zero  test_loop  test_lw  test_r  test_r_2  test_sra  test_srl  test_sw  test_tent
mips_sim/assets/: sw.js
mips_sim/src/: app.rs  assembler.rs  lib.rs  main.rs  simulation.rs  simulation_controller.rs
mips_sim/src/units/: add_unit.rs  alu.rs  alu_control.rs  ander.rs  assembler.rs  concater.rs  control.rs  data_memory.rs  instruction_memory.rs  misc_units.rs  mod.rs  mux.rs  program_counter.rs  registers.rs  sign_extend.rs  unit.rs
